[package]
name = "vib"
version = "0.1.0"
edition = "2021"
[dependencies]
gtk = "0.18.1"
#gtk4 = "0.9.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
cssparser = "0.26"
serde = { version = "1", features = ["derive"] }
regex = "1.11.0"
webkit2gtk = "*"
gdk = "0.18.0"
glib = "0.20.4"
